2003-01-26  Wakaba  <w@cube.wakaba.ssm>

	* Formatter.pm (replace): Trim attribute name/value pair.

2003-01-04  Wakaba  <w@suika.fam.cx>

	* Formatter.pm (replace): Don't split by ',' in quoted-strings.

2002-12-15  Wakaba  <w@suika.fam.cx>

	* Formatter.pm (%char;): Removed.

2002-12-05  Wakaba  <w@suika.fam.cx>

	* Formatter.pm (%FMT2TXT): New (internal) initial format rule,
	"-bare_text".
	(replace): "Replace" non-%-text with "-bare_text" rule.
	(pod): Methods and initial rules are documented.

2002-12-04  Wakaba  <w@suika.fam.cx>

	* Formatter.pm (replace): Accept ")" in quoted-string.

2002-11-13  Wakaba <w@suika.fam.cx>

	* ChangeLog: New file.
	* Formatter.pm: New module.