@@ -1,3 +1,8 @@
+2003-03-28  Wakaba  <w@offweb.ddo.jp>
+
+	* Formatter.pm (replace): Treat oo of "str"oo of attr value as option and parse attr value if 'p' option is specified.
+	(replace): Replace '-' to '_' in attr name.
+
 2003-01-26  Wakaba  <w@cube.wakaba.ssm>
 
 	* Formatter.pm (replace): Trim attribute name/value pair.
